--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -86,8 +86,18 @@
               </li>
               <% } %>
                 <li>
+                  <div class="dashimg"><a href=" /call/dashboard"><img src="../images/logout.png">Dashboard Call</a></div>
+                </li>
+               <li>
+                  <div class="dashimg"><a href=" /call/create"><img src="../images/logout.png">Create Call</a></div>
+                </li>
+                <li>
+                  <div class="dashimg"><a href=" /call/show"><img src="../images/logout.png">Show Call</a></div>
+                </li>
+                <li>
                   <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Logout</a></div>
                 </li>
+                
       </ul>
     </nav>
     <script type="module">
