--- a/views/registrations/index.ejs
+++ b/views/registrations/index.ejs
@@ -168,9 +168,10 @@
                     "<option value='Compras'>Compras</option> \n" +
                     "<option value='T.I'>T.I</option> \n" +
                     "<option value='SAC'>SAC</option> \n" +
+                    //"<option value='SAU'>SAU</option> \n" +
                     "<option value='Diretoria'>Diretoria</option> \n" +
-                    "<option value='Comunicacao'>Comunicacao</option> \n" +
-                    "<option value='Cobranca'>Cobranca</option> \n" +
+                    "<option value='Marketing'>Marketing</option> \n" +
+                    "<option value='Cobranca'>Cobrança</option> \n" +
                     "</select> \n" +
                     "<div class='select-dropdown'></div> \n" +
                     "</div> \n" +
