--- a/views/registrationsToken/index.ejs
+++ b/views/registrationsToken/index.ejs
@@ -18,6 +18,10 @@
               <option value="8">Compras</option>
               <option value="9">Financeiro</option>
               <option value="10">T.I</option>
+              <option value="11">Marketing</option>
+              <!--<option value="12">SAU</option>--> 
+              <option value="13">SAC</option>
+              <option value="14">RH</option>       
             </select>
           </div>
           <input type="email" name="email" class="form-control" placeholder="Informe o email:" style="margin-left:1%">
