--- a/views/dashboard/pending.ejs
+++ b/views/dashboard/pending.ejs
@@ -85,13 +85,14 @@
       </table>
 
       <script>
-        var table = new DataTable('#myTable', {
-          language: {
-            url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-          },
-
-          order: 'desc'
-        });
+      var table = new DataTable('#myTable', {
+        language: {
+          url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+        },
+      
+        order: [[0, 'desc']] // Sort the first column (index 0) in descending order
+      });
+      
 
       </script>
       </div>
