--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -69,22 +69,23 @@
           <div class="dashimg"><a href="/payments"><img src="../images/dolar.png">Pagamentos</a></div>
         </li>
         <% if(user.permissions.user_registration==1){ %>
-          <li>
-            <div class="dashimg"><a href="/registrations_token"><img src="../images/useradd.png">Cadastro</a></div>
-          </li>
-          <li>
-            <div class="dashimg"><a href="/users"><img src="../images/users.png">Usuários</a></div>
-          </li>
-          <% } %>
+        <li>
+          <div class="dashimg"><a href="/registrations_token"><img src="../images/useradd.png">Cadastro</a></div>
+        </li>
+        <li>
+          <div class="dashimg"><a href="/users"><img src="../images/users.png">Usuários</a></div>
+        </li>
+        <% } %>
 
-            <% if(user.permissions.supplier_registration==1){ %>
-              <li>
-                <div class="dashimg"><a href=" /suppliers"><img src="../images/pacote.png">Fornecedores</a></div>
-              </li>
-              <li>
-                <div class="dashimg"><a href=" /suppliers_register"><img src="../images/addforn.png">Cadastrar Fornecedor</a></div>
-              </li>
-              <% } %>
+        <% if(user.permissions.supplier_registration==1){ %>
+        <li>
+          <div class="dashimg"><a href=" /suppliers"><img src="../images/pacote.png">Fornecedores</a></div>
+        </li>
+        <li>
+          <div class="dashimg"><a href=" /suppliers_register"><img src="../images/addforn.png">Cadastrar Fornecedor</a></div>
+        </li>
+        <% } %>
+        <!--
                 <li>
                   <div class="dashimg"><a href=" /call/dashboard"><img src="../images/logout.png">Dashboard Call</a></div>
                 </li>
@@ -94,10 +95,11 @@
                 <li>
                   <div class="dashimg"><a href=" /call/show"><img src="../images/logout.png">Show Call</a></div>
                 </li>
-                <li>
-                  <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Logout</a></div>
-                </li>
-                
+                -->
+        <li>
+          <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Logout</a></div>
+        </li>
+
       </ul>
     </nav>
     <script type="module">
@@ -106,8 +108,12 @@
       Typebot.initBubble({
         typebot: "compras-syhrwnh",
         theme: {
-          button: { backgroundColor: "#00aa9b" },
-          chatWindow: { backgroundColor: "#fff" },
+          button: {
+            backgroundColor: "#00aa9b"
+          },
+          chatWindow: {
+            backgroundColor: "#fff"
+          },
         },
       });
     </script>
