--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -51,7 +51,7 @@
 
       <hr width="75%">
       <h3 class="display-4" style="text-align: center; margin-top: 20px;">Últimas Solicitações</h3>
-      <table class="table table-responsive-sm justify-content-center">
+      <table id="myTable" class="table table-responsive-sm justify-content-center">
         <thead>
           <tr style="background-color: #9e9e9e">
             <th scope="col">#</th>
@@ -124,6 +124,17 @@
       </table> 
       </div>
       </div>
+
+      <script>
+    var table = new DataTable('#myTable', {
+        language: {
+          url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+        },
+      
+        order: [[0, 'desc']] // Sort the first column (index 0) in descending order
+      });
+
+  </script>
 
       <!-- Modal -->
       <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
