--- a/views/dashboard/reproved.ejs
+++ b/views/dashboard/reproved.ejs
@@ -77,12 +77,12 @@
 
   <script>
     var table = new DataTable('#myTable', {
-      language: {
-        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-      },
-
-      order: 'desc'
-    });
+        language: {
+          url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+        },
+      
+        order: [[0, 'desc']] // Sort the first column (index 0) in descending order
+      });
 
   </script>
   <%- include('../partials/footer.ejs') %>
