--- a/views/call/dashboard.ejs
+++ b/views/call/dashboard.ejs
@@ -1,19 +1,93 @@
 <%- include('../partials/header.ejs') %>
 
+  <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px; margin-bottom: -50px;"></a>
 
-<h1>Dashboard</h1>
+  <h3 class='display-4 mb-4 mt-5' style="text-align: center;">Meus Chamados</h3>
+  <div class="form-row justify-content-center">
+    <div class="form-group col-md-3">
+      <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
+        <img class="card-img-top" src="../images/danied-cuate.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">PENDENTES</h5>
+          <a href="/dashboard/reproved" class="btn btn-danger">Visualizar <span class="badge badge-light">
+            </span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group col-md-3">
+      <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
+        <img class="card-img-top" src="../images/pendent-folder-cuate.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">EM ATENDIMENTO</h5>
+          <a href="/dashboard/pending" class="btn btn-warning">Visualizar <span class="badge badge-light">
+            </span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group col-md-3">
+      <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
+        <img class="card-img-top" src="../images/aproved-rafiki.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">FINALIZADOS</h5>
+          <a href="/dashboard/aproved" class="btn btn-success">Visualizar <span class="badge badge-light">
+            </span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr width="75%">
+  <h3 class="display-4" style="text-align: center; margin-top: 20px;">Últimos Chamados</h3>
+  <table id="myTable" class="table table-responsive-sm" style="margin-left: auto !important; margin-right: auto !important;">
+    <thead>
+      <tr style="background-color: #9e9e9e">
+        <th scope="col">#</th>
+        <th scope="col">Categoria</th>
+        <th scope="col">Prioridade</th>
+        <th scope="col">Atendente</th>
+        <th scope="col">Data de Criação</th>
+        <th scope="col">Detalhes</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <tr style="background-color: #dcdcdc26">
+        <th scope="row">
+
+        </th>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td><a href="">Detalhes</a></td>
+      </tr>
+    </tbody>
+  </table> 
+
+  <script>
+    var table = new DataTable('#myTable', {
+      language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+      },
+
+      order: [[0, 'desc']] // Sort the first column (index 0) in descending order
+    });
+
+  </script>
 
 
 
 
 
 
-
-
-<%- include('../partials/footer.ejs') %>
-
-
-
-
-
-
+  <%- include('../partials/footer.ejs') %>
