--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -1,88 +1,88 @@
 <%- include('../partials/header.ejs') %>
 
 
-      <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
-      <h2 class='mb-4' style="margin-top:25px">Gerenciamento de Fornecedores</h2>
+  <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+  <h2 class='mb-4' style="margin-top:25px; font-weight:lighter !important">Gerenciamento de Fornecedores</h2>
 
-      <table id="example" class="table table-striped table-bordered" style="width: 100%">
+  <table id="example" class="table table-striped table-bordered" style="width: 100%">
 
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>CNPJ</th>
-            <th>Nome</th>
-            <th>Status</th>
-            <th>Excluir</th>
-          </tr>
-        </thead>
-        <tbody>
-
-
-          <% suppliers.forEach(supplier=> { %>
-
-            <tr>
-              <td>
-                <%= supplier.id %>
-              </td>
-              <td>
-                <%= supplier.cnpj %>
-              </td>
-              <td>
-                <%= supplier.name %>
-              </td>
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>CNPJ</th>
+        <th>Nome</th>
+        <th>Status</th>
+        <th>Excluir</th>
+      </tr>
+    </thead>
+    <tbody>
 
 
-              <% if(supplier.status==1){%>
-                <td> <input id=<%=supplier.id %> type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
-                <% }else{ %>
-                  <td> <input id=<%=supplier.id %> type="checkbox" unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
-                  <% } %>
+      <% suppliers.forEach(supplier=> { %>
 
-                    <td><a href="delete_supplier/<%= supplier.id %>"> <button><i class="fa fa-trash-o"></i></button> </a></td>
-            </tr>
-
-            <% }); %>
-
-              <script type="text/javascript">
-
-
-                $('input:checkbox').change(
-                  function () {
-                    if ($(this).is(':checked')) {
-                      // alert($(this).attr("id"));
-                      window.location.href = "/activate_supplier/" + $(this).attr("id");
-                    } else {
-
-                      //alert($(this).attr("id"));
-                      window.location.href = "desactivate_supplier/" + $(this).attr("id");
-                    }
-                  });
-
-              </script>
+        <tr>
+          <td>
+            <%= supplier.id %>
+          </td>
+          <td>
+            <%= supplier.cnpj %>
+          </td>
+          <td>
+            <%= supplier.name %>
+          </td>
 
 
-        </tbody>
-      </table>
-      </div>
-      </div>
+          <% if(supplier.status==1){%>
+            <td> <input id=<%=supplier.id %> type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
+            <% }else{ %>
+              <td> <input id=<%=supplier.id %> type="checkbox" unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
+              <% } %>
+
+                <td><a href="delete_supplier/<%= supplier.id %>"> <button><i class="fa fa-trash-o"></i></button> </a></td>
+        </tr>
+
+        <% }); %>
+
+          <script type="text/javascript">
 
 
+            $('input:checkbox').change(
+              function () {
+                if ($(this).is(':checked')) {
+                  // alert($(this).attr("id"));
+                  window.location.href = "/activate_supplier/" + $(this).attr("id");
+                } else {
+
+                  //alert($(this).attr("id"));
+                  window.location.href = "desactivate_supplier/" + $(this).attr("id");
+                }
+              });
+
+          </script>
 
 
-      <script type="text/javascript">
-
-        var table = new DataTable('#example', {
-          language: {
-            url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-          },
-
-          order: 'desc'
-        });
-
-      </script>
+    </tbody>
+  </table>
+  </div>
+  </div>
 
 
 
 
+  <script type="text/javascript">
 
-      <%- include('../partials/footer.ejs') %>
+    var table = new DataTable('#example', {
+      language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+      },
+
+      order: 'desc'
+    });
+
+  </script>
+
+
+
+
+
+  <%- include('../partials/footer.ejs') %>
