--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,86 +1,86 @@
 <%- include('../partials/header.ejs') %>
 
 
-      <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+  <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
 
-      <h2 class='mb-4' style="margin-top:25px">Gerenciamento de Usuários</h2>
+  <h2 class='mb-4' style="margin-top:25px;font-weight:lighter !important">Gerenciamento de Usuários</h2>
 
-      <table id="example" class="table table-striped table-bordered" style="width: 100%">
+  <table id="example" class="table table-striped table-bordered" style="width: 100%">
 
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Login</th>
-            <th>Status</th>
-            <th>Permissões</th>
-          </tr>
-        </thead>
-        <tbody>
-
-
-          <% listusers.forEach(usuario=> { %>
-
-            <tr>
-              <td>
-                <%= usuario.id %>
-              </td>
-              <td>
-                <%= usuario.login %>
-              </td>
-
-              <% if(usuario.active==1){%>
-                <td> <input id=<%=usuario.id %> type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
-                <% }else{ %>
-                  <td> <input id=<%=usuario.id %> type="checkbox" unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
-                  <% } %>
-
-                    <td>
-                      <a href="/permission/<%= usuario.id %>" class="btn btn-warning">Abrir</a>
-                    </td>
-
-            </tr>
-
-            <% }); %>
-
-              <script type="text/javascript">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Login</th>
+        <th>Status</th>
+        <th>Permissões</th>
+      </tr>
+    </thead>
+    <tbody>
 
 
-                $('input:checkbox').change(
-                  function () {
-                    if ($(this).is(':checked')) {
-                      // alert($(this).attr("id"));
-                      window.location.href = "/activate_user/" + $(this).attr("id");
-                    } else {
+      <% listusers.forEach(usuario=> { %>
 
-                      //alert($(this).attr("id"));
-                      window.location.href = "/desactivate_user/" + $(this).attr("id");
-                    }
-                  });
+        <tr>
+          <td>
+            <%= usuario.id %>
+          </td>
+          <td>
+            <%= usuario.login %>
+          </td>
 
-              </script>
+          <% if(usuario.active==1){%>
+            <td> <input id=<%=usuario.id %> type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
+            <% }else{ %>
+              <td> <input id=<%=usuario.id %> type="checkbox" unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
+              <% } %>
+
+                <td>
+                  <a href="/permission/<%= usuario.id %>" class="btn btn-warning">Abrir</a>
+                </td>
+
+        </tr>
+
+        <% }); %>
+
+          <script type="text/javascript">
 
 
-        </tbody>
-      </table>
+            $('input:checkbox').change(
+              function () {
+                if ($(this).is(':checked')) {
+                  // alert($(this).attr("id"));
+                  window.location.href = "/activate_user/" + $(this).attr("id");
+                } else {
+
+                  //alert($(this).attr("id"));
+                  window.location.href = "/desactivate_user/" + $(this).attr("id");
+                }
+              });
+
+          </script>
 
 
-
-
-
-      <script type="text/javascript">
-
-        var table = new DataTable('#example', {
-          language: {
-            url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-          },
-
-          order: 'desc'
-        });
-
-      </script>
+    </tbody>
+  </table>
 
 
 
 
 
-      <%- include('../partials/footer.ejs') %>
+  <script type="text/javascript">
+
+    var table = new DataTable('#example', {
+      language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+      },
+
+      order: 'desc'
+    });
+
+  </script>
+
+
+
+
+
+  <%- include('../partials/footer.ejs') %>
