--- a/views/call/categories.ejs
+++ b/views/call/categories.ejs
@@ -14,7 +14,7 @@
 
     </form>
 
-    <table>
+    <table id="myTable" class="table table-responsive-sm justify-content-center" style="margin-left: auto !important; margin-right: auto !important;">
         <thead>
             <tr>
                 <th>ID</th>
@@ -33,6 +33,17 @@
         </tbody>
     </table>
 
+
+    <script>
+        var table = new DataTable('#myTable', {
+          language: {
+            url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+          },
+
+          order: [[0, 'desc']] // Sort the first column (index 0) in descending order
+        });
+
+      </script>
 
 
 <%- include('../partials/footer.ejs') %>
