--- a/views/call/categories.ejs
+++ b/views/call/categories.ejs
@@ -1,51 +1,65 @@
 <%- include('../partials/header.ejs') %>
 
+  <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+  <div class="sobreposicaoFormToken" style="width: 310px;margin-top:25px; margin-bottom: -48px; margin-left: 32% !important;background-color:#fff !important">
+    <h2 style="font-weight:lighter !important">Cadastro de categoria</h2>
+  </div>
 
-<form action="/create/category" method="post">
-    <label for="departament">Departamento</label>
-    <select class="form-control" name="departament">
-     <% departaments.forEach(departament => { %>
-          <option value="<%= departament.profile %>"><%= departament.name %></option>
-     <% }); %>
-    
-     <input type="text" name="describe"> 
 
-     <button class="btn accept" type="submit">Enviar</button>
+  <div class="container">
+    <form action="/create/category" method="post" style="width: 48%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px; margin-left: 20% !important;margin-top: 2% !important; margin-bottom: 2%;">
+      <label for="departament">Departamento</label>
+      <select class="form-control" name="departament" style="margin-bottom: 2%;">
+        <% departaments.forEach(departament=> { %>
+          <option value="<%= departament.profile %>">
+            <%= departament.name %>
+          </option>
+          <% }); %>
 
+            <input type="text" name="describe" style="margin-bottom: 2%;">
+
+            <button class="btn accept" type="submit" style="display: block;">Enviar</button>
     </form>
+  </div>
 
-    <table id="myTable" class="table table-responsive-sm justify-content-center" style="margin-left: auto !important; margin-right: auto !important;">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Departamento</th>
-                <th>Descrição</th>
-                <th>Excluir</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% categories.forEach(category => { %>
-
-                    <td><%= category.id %></td>
-                    <td><%= category.departament %></td>
-                    <td><%= category.description %></td>
-                    <td> <a href="/delete/category/<%= category.id %>" class="btn btn-primary">Excluir</a></td>
-
-            <% }); %>
-        </tbody>
-    </table>
-
-
-    <script>
-        var table = new DataTable('#myTable', {
-          language: {
-            url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-          },
-
-          order: [[0, 'desc']] // Sort the first column (index 0) in descending order
-        });
-
-      </script>
+  <table id="myTable" class="table table-striped table-bordered" style="width: 100%">
+    <thead>
+      <tr class="destaque">
+        <th>ID</th>
+        <th>Departamento</th>
+        <th>Descrição</th>
+        <th>Excluir</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% categories.forEach(category=> { %>
+        <tr>
+          <td>
+            <%= category.id %>
+          </td>
+          <td>
+            <%= category.departament %>
+          </td>
+          <td>
+            <%= category.description %>
+          </td>
+          <td> <a href="/delete/category/<%= category.id %>" class="btn btn-danger">Excluir</a></td>
+        </tr>
+        <% }); %>
+    </tbody>
+  </table>
 
 
-<%- include('../partials/footer.ejs') %>
+  <script>
+    var table = new DataTable('#myTable', {
+      language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+      },
+
+      order: [[0, 'desc']] // Sort the first column (index 0) in descending order
+    });
+
+  </script>
+
+
+  <%- include('../partials/footer.ejs') %>
