--- a/views/call/dashboard.ejs
+++ b/views/call/dashboard.ejs
@@ -9,7 +9,7 @@
         <img class="card-img-top" src="../images/danied-cuate.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">PENDENTES</h5>
-          <a href="/dashboard/reproved" class="btn btn-danger">Visualizar <span class="badge badge-light">
+          <a href="/call/pending" class="btn btn-danger">Visualizar <span class="badge badge-light"><%= pending.length %>
             </span></a>
         </div>
       </div>
@@ -20,7 +20,7 @@
         <img class="card-img-top" src="../images/pendent-folder-cuate.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">EM ATENDIMENTO</h5>
-          <a href="/dashboard/pending" class="btn btn-warning">Visualizar <span class="badge badge-light">
+          <a href="/call/inservice" class="btn btn-warning">Visualizar <span class="badge badge-light"><%= inservice.length %>
             </span></a>
         </div>
       </div>
@@ -31,7 +31,7 @@
         <img class="card-img-top" src="../images/aproved-rafiki.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">FINALIZADOS</h5>
-          <a href="/dashboard/aproved" class="btn btn-success">Visualizar <span class="badge badge-light">
+          <a href="/call/finished" class="btn btn-success">Visualizar <span class="badge badge-light"><%= finished.length %>
             </span></a>
         </div>
       </div>
@@ -45,32 +45,32 @@
       <tr style="background-color: #9e9e9e">
         <th scope="col">#</th>
         <th scope="col">Categoria</th>
+        <th scope="col">Assunto</th>
         <th scope="col">Prioridade</th>
-        <th scope="col">Atendente</th>
         <th scope="col">Data de Criação</th>
         <th scope="col">Detalhes</th>
       </tr>
     </thead>
     <tbody>
-
-      <tr style="background-color: #dcdcdc26">
-        <th scope="row">
-
-        </th>
-        <td>
-
-        </td>
-        <td>
-
-        </td>
-        <td>
-
-        </td>
-        <td>
-
-        </td>
-        <td><a href="">Detalhes</a></td>
-      </tr>
+      
+        <% if(lastCalls != undefined){
+           lastCalls.forEach(call => { 
+           let formattedDate = new Date(call.createdAt).toLocaleDateString('pt-BR', {
+            day: '2-digit',
+            month: '2-digit',
+            year: 'numeric'
+            }); 
+          %>
+          <tr style="background-color: #dcdcdc26">
+            <th scope="row">
+          <td><%= call.id  %></td>
+          <td><%= call.category.substring(0, 30) %></td>
+          <td><%= call.subject.substring(0, 30) %></td>
+          <td><%= call.priority %></td>
+          <td><%= formattedDate %></td>
+          <td><a href="#" class="btn btn-success">Detalhes"></a></td>
+        </tr>
+     <%  }); } %>   
     </tbody>
   </table> 
 
